--- a/app/src/main/res/layout/fragment_add_payment_method.xml
+++ b/app/src/main/res/layout/fragment_add_payment_method.xml
@@ -44,40 +44,13 @@
             android:textColor="@color/dark_blue"
             android:textSize="20dp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/imgView_profileLogo"
             app:layout_constraintTop_toTopOf="parent">
 
         </TextView>
-
-        <EditText
-            android:id="@+id/editText_welcome_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_profile"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="130dp"
-            android:layout_toEndOf="@+id/imgView_profileLogo"
-            android:background="@null"
-            android:shadowColor="@color/black"
-            android:shadowDx="2"
-            android:shadowDy="2"
-            android:shadowRadius="5"
-            android:text=""
-            android:textAlignment="textEnd"
-            android:textColor="@color/white"
-            android:textSize="15dp"
-            android:textStyle="italic"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.9"
-            app:layout_constraintStart_toEndOf="@+id/imgView_profileLogo"
-            app:layout_constraintTop_toBottomOf="@+id/tv_profile"
-            app:layout_constraintVertical_bias="0.0">
-
-        </EditText>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -101,51 +74,64 @@
             android:orientation="vertical"
             android:padding="24dp">
 
-
             <EditText
                 android:id="@+id/EtCredictCardNo"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
+                android:paddingStart="10dp"
                 android:layout_marginTop="40dp"
+                android:layout_margin="5dp"
                 android:background="@drawable/user_edittext"
                 android:drawablePadding="8dp"
-                android:hint="@string/hintCredict_card_number"
+                android:hint="@string/hintCreditCardNo"
                 android:inputType="textEmailAddress"
                 android:padding="8dp"
                 android:textColor="@color/light_blue"
                 android:textColorHighlight="@color/black"
                 android:textColorHint="@color/light_blue"
-                android:textSize="14sp" />
+                android:textSize="@dimen/txt12" />
 
-            <EditText
-                android:id="@+id/EtCvv"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="40dp"
-                android:background="@drawable/user_edittext"
-                android:drawablePadding="8dp"
-                android:hint="@string/hintCvv"
-                android:inputType="textEmailAddress"
-                android:padding="8dp"
-                android:textColor="@color/light_blue"
-                android:textColorHighlight="@color/black"
-                android:textColorHint="@color/light_blue"
-                android:textSize="14sp" />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/EtCvv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:paddingStart="10dp"
+                    android:background="@drawable/user_edittext"
+                    android:drawablePadding="8dp"
+                    android:hint="@string/hintCvv"
+                    android:inputType="textEmailAddress"
+                    android:padding="8dp"
+                    android:textColor="@color/light_blue"
+                    android:textColorHighlight="@color/black"
+                    android:textColorHint="@color/light_blue"
+                    android:textSize="@dimen/txt12" />
 
-            <EditText
-                android:id="@+id/EtExpDate"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="40dp"
-                android:background="@drawable/user_edittext"
-                android:drawablePadding="8dp"
-                android:hint="EXP Date"
-                android:inputType="textEmailAddress"
-                android:padding="8dp"
-                android:textColor="@color/light_blue"
-                android:textColorHighlight="@color/black"
-                android:textColorHint="@color/light_blue"
-                android:textSize="14sp" />
+                <EditText
+                    android:id="@+id/EtExpDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:paddingStart="10dp"
+                    android:background="@drawable/user_edittext"
+                    android:drawablePadding="8dp"
+                    android:hint="EXP Date"
+                    android:inputType="textEmailAddress"
+                    android:padding="8dp"
+                    android:textColor="@color/light_blue"
+                    android:textColorHighlight="@color/black"
+                    android:textColorHint="@color/light_blue"
+                    android:textSize="@dimen/txt12" />
+
+            </LinearLayout>
+
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -153,31 +139,22 @@
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
-
                 <Button
                     android:id="@+id/BtnAddcard"
                     android:layout_width="@dimen/btnWidth"
                     android:layout_height="@dimen/btnHeight"
                     android:layout_marginTop="30dp"
-                    android:layout_marginBottom="30dp"
+                    android:layout_marginBottom="20dp"
                     android:backgroundTint="@color/dark_blue"
-                    android:text="Add card"
-                    android:textSize="14sp">
+                    android:text="Add card">
 
                 </Button>
-
 
             </LinearLayout>
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-    </LinearLayout>
 
 
 </FrameLayout>
