--- a/app/src/main/res/layout/fragment_charity_view_user.xml
+++ b/app/src/main/res/layout/fragment_charity_view_user.xml
@@ -45,7 +45,7 @@
             android:text="@string/Tvcharity_name"
             android:textAlignment="textEnd"
             android:textColor="@color/dark_blue"
-            android:textSize="20dp"
+            android:textSize="@dimen/txt20"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
