--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -10,7 +10,7 @@
         android:id="@+id/btn_admin_home_charities"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="188dp"
+        android:layout_marginTop="236dp"
         android:onClick="CharityManagement"
         android:text="Charities"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,16 +20,16 @@
 
     <Button
         android:id="@+id/btn_admin_home_posts"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="108dp"
+        android:layout_height="49dp"
         android:onClick="PostManagement"
         android:text="Posts"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_admin_home_charities" />
-
-
+        app:layout_constraintTop_toBottomOf="@+id/btn_admin_home_charities"
+        app:layout_constraintVertical_bias="0.266" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
