--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -74,12 +74,17 @@
         <EditText
             android:id="@+id/edtText_post_description"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/user_edittext"
             android:drawablePadding="8dp"
             android:padding="8dp"
             android:textColor="@color/light_blue"
-            android:textColorHighlight="@color/black" />
+            android:textColorHighlight="@color/black"
+            android:inputType="textMultiLine"
+            android:gravity="top|start"
+            android:scrollbars="vertical"
+            />
+
 
         <TextView
             android:id="@+id/tvAddImage"
