--- a/app/src/main/res/layout/activity_charity_req_page.xml
+++ b/app/src/main/res/layout/activity_charity_req_page.xml
@@ -104,12 +104,18 @@
             <EditText
                 android:id="@+id/edtText_req_description"
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/user_edittext"
                 android:drawablePadding="8dp"
                 android:padding="8dp"
                 android:textColor="@color/light_blue"
-                android:textColorHighlight="@color/black" />
+                android:textColorHighlight="@color/black"
+                android:inputType="textMultiLine"
+                android:lines="2"
+                android:gravity="top|start"
+                android:scrollbars="vertical"
+                />
+
 
             <TextView
                 android:id="@+id/tvBankDetails"
@@ -123,12 +129,18 @@
             <EditText
                 android:id="@+id/edtText_req_bankdetails"
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/user_edittext"
                 android:drawablePadding="8dp"
                 android:padding="8dp"
                 android:textColor="@color/light_blue"
-                android:textColorHighlight="@color/black" />
+                android:textColorHighlight="@color/black"
+                android:inputType="textMultiLine"
+
+                android:gravity="top|start"
+                android:scrollbars="vertical"
+                />
+
 
             <Button
                 android:id="@+id/btn_req_send"
@@ -148,13 +160,13 @@
 
                 <TextView
                     android:id="@+id/tvFootNote"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
+                    android:layout_width="311dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/red"
                     android:padding="10dp"
                     android:text="@string/tvRequestFootNote"
-                    android:textColor="@color/white"
-                    android:background="@color/red" />
+                    android:textAlignment="center"
+                    android:textColor="@color/white" />
 
 
 
