--- a/app/src/main/res/layout/activity_post_manage_admin.xml
+++ b/app/src/main/res/layout/activity_post_manage_admin.xml
@@ -72,6 +72,7 @@
         android:layout_marginBottom="30dp"
         android:backgroundTint="@color/light_blue"
         android:clickable="true"
+        android:onClick="addpost"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/baseline_add_24" />
