--- a/app/src/main/res/layout/activity_update_post.xml
+++ b/app/src/main/res/layout/activity_update_post.xml
@@ -19,7 +19,7 @@
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="55dp">
+            android:layout_height="68dp">
 
             <ImageView
                 android:id="@+id/UpdatePostImageView"
@@ -74,12 +74,17 @@
         <EditText
             android:id="@+id/edtText_post_description_update"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/user_edittext"
             android:drawablePadding="8dp"
             android:padding="8dp"
             android:textColor="@color/light_blue"
-            android:textColorHighlight="@color/black" />
+            android:textColorHighlight="@color/black"
+            android:inputType="textMultiLine"
+            android:gravity="top|start"
+            android:scrollbars="vertical"
+            />
+
 
         <TextView
             android:id="@+id/tvAddImage"
