--- a/app/src/main/res/layout/item_donations.xml
+++ b/app/src/main/res/layout/item_donations.xml
@@ -5,68 +5,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp"
-    android:layout_margin="16dp">
+    android:backgroundTint="@color/light_blue"
+    android:layout_margin="5dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginVertical="6dp"
-        android:orientation="vertical">
+        android:layout_margin="10dp"
+        android:layout_gravity="center_vertical"
+        android:orientation="horizontal">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvUserName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_weight="1"
+            android:text="@string/Tvuser_name"
+            android:textColor="@color/white"
+            android:layout_marginStart="8dp"
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
-
-
-            <TextView
-                android:id="@+id/tvUserName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/Tvuser_name"
-                android:textColor="@color/dark_blue"
-                android:layout_marginStart="8dp"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                >
-
-                <TextView
-                    android:id="@+id/tvAmount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/TvAmount"
-                    android:textColor="@color/black"
-                    android:textSize="20dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-        </LinearLayout>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
-
-
-
-
-
-
-        </LinearLayout>
+            android:layout_weight="1"
+            android:text="@string/TvAmount"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </LinearLayout>
+
 
 </androidx.cardview.widget.CardView>
